--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A simple Node.js app to display a resume",
   "main": "index.js","scripts": {
   "start": "node index.js",
-  "test": "jest"
+  "test": "jest",
+  "build": "echo 'No build step required for this simple app'"
 },
   "dependencies": {
     "express": "^4.18.2"
