updating deploy.yaml

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -23,15 +23,16 @@ jobs:
         with:
           node-version: '20'
 
-      - name: Install dependencies
-        run: npm install
+      - name: Install dependencies (if applicable)
+        run: |
+          if [ -f "package.json" ]; then
+            npm install
+          fi
 
       - name: Build project (if needed)
         run: |
           if [ -f "package.json" ]; then
             npm run build || echo "No build script found, skipping..."
-          else
-            echo "No package.json found, skipping build step..."
           fi
 
       - name: Setup GitHub Pages
@@ -40,7 +41,7 @@ jobs:
       - name: Upload static files
         uses: actions/upload-pages-artifact@v3
         with:
-          path: public  # Change this to match the folder containing your HTML/CSS/JS files
+          path: public  # Ensure your HTML/CSS files are in this directory
 
       - name: Deploy to GitHub Pages
         id: deployment
